--- a/test1/index.html
+++ b/test1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-  <h1 id="sum"></h1>
-  <form action="#">
-    <input id="a" type="text" value=0.1>
-    <input id="b" type="text" value=0.2>
+  <h2 class="sum"><span>|</span></h2>
+  <form>
+    <input class="a" type="text" value=0.1>
+    <input class="b" type="text" value=0.2>
     <input class="btn" type="submit" value="Сложить">
   </form>
-  <script src="bundle.js"></script>
+
+  <script src="dist/bundle.js"></script>
 </body>
 
 </html>
