--- a/test1/index.html
+++ b/test1/index.html
@@ -16,7 +16,7 @@
     <input class="btn" type="submit" value="Сложить">
   </form>
 
-  <script src="dist/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
