Add Header Section

--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -8,6 +8,28 @@
   <title>LOGO DESIGN</title>
 </head>
 <body>
-  <h1>HELLO FROM LOGO DESIGN</h1>
+  <header class="header">
+    <div class="container">
+      <div class="header-wrapper">
+        <div class="header-logo">
+          <span>Сергей<strong>Батурин</strong></span>
+        </div>
+        <div class="header-contacts">
+          <a href="tel:+79177747752">+7 917 774 7752</a>
+          <a href="mailto:sergejbaturin@gmail.com">sergejbaturin@gmail.com</a>
+          <span>Skype: serjbertran</span>
+          <div class="icons">
+            <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a>
+            <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>
+          </div>
+        </div>
+        <h1>
+          ЛОГО
+          <br />
+          <span>ДИЗАЙН</span>
+        </h1>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
