--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <title>LOGO DESIGN</title>
 </head>
 <body>
@@ -19,13 +19,13 @@
           <a href="mailto:sergejbaturin@gmail.com">sergejbaturin@gmail.com</a>
           <span>Skype: serjbertran</span>
           <div class="icons">
-            <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a>
+            <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a> |
             <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>
           </div>
         </div>
-        <h1>
+        <h1 class="header-utp">
           ЛОГО
-          <br />
+          <br>
           <span>ДИЗАЙН</span>
         </h1>
       </div>
