--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>LOGO DESIGN</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
       <div class="header-wrapper">
-        <div class="header-logo">
-          <span>Сергей<strong>Батурин</strong></span>
-        </div>
-        <div class="header-contacts">
-          <a href="tel:+79177747752">+7 917 774 7752</a>
-          <a href="mailto:sergejbaturin@gmail.com">sergejbaturin@gmail.com</a>
-          <span>Skype: serjbertran</span>
-          <div class="icons">
-            <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a> |
-            <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>
+        
+        <div class="header-nav">
+          <div class="header-contacts">
+            <a href="tel:+79177747752">+7 917 774 7752</a>
+            <a href="mailto:sergejbaturin@gmail.com">sergejbaturin@gmail.com</a>
+            <span>Skype: serjbertran</span>
+            <div class="icons">
+              <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a> |
+              <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>
+            </div>
+            <div class="header-logo">
+                <span>Сергей<strong>Батурин</strong></span>
+              </div>
           </div>
         </div>
+
         <h1 class="header-utp">
-          ЛОГО
-          <br>
-          <span>ДИЗАЙН</span>
+          ЛОГО<br /><span>ДИЗАЙН</span>
         </h1>
+
+        <div class="header-arrow">
+          <i class="fa fa-angle-down" aria-hidden="true"></i>
+        </div>
       </div>
     </div>
   </header>
 </body>
+
 </html>
