--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="js/slick/slick.css" />
   <link rel="stylesheet" href="styles.css">
   <title>LOGO DESIGN</title>
 </head>
@@ -16,7 +17,7 @@
   <header class="header">
     <div class="container">
       <div class="header-wrapper">
-        
+
         <div class="header-nav">
           <div class="header-contacts">
             <a href="tel:+79177747752">+7 917 774 7752</a>
@@ -27,8 +28,8 @@
               <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>
             </div>
             <div class="header-logo">
-                <span>Сергей<strong>Батурин</strong></span>
-              </div>
+              <span>Сергей<strong>Батурин</strong></span>
+            </div>
           </div>
         </div>
 
@@ -51,52 +52,68 @@
         <div class="slider-container">
           <!-- CITY -->
           <div class="slider-item">
-              <div class="slider-main-img city">
-                <div class="main-img">
-                  <img src="img/logo/city8.png" alt="logo">
-                </div>
-                <div class="main-img">
-                    <img src="img/logo/city7.png" alt="logo">
-                </div>
+            <div class="slider-main-img city">
+              <div class="main-img">
+                <img src="img/logo/city8.png" alt="logo">
               </div>
-              <p class="slider-caption">Логотип для риэлторской компании "Мой Город"</p>
+              <div class="main-img">
+                <img src="img/logo/city7.png" alt="logo">
+              </div>
             </div>
-          <!-- BIKE -->
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/city10.png" alt="logo mockup">
+              <img src="img/logo/city11.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для риэлторской компании "Мой Город"</p>
+          </div>
+          <!-- ACTIVE WOMAN -->
           <div class="slider-item">
-            <div class="slider-main-img bike">
+            <div class="slider-main-img woman">
               <div class="main-img">
-                <img src="img/logo/bike.png" alt="logo">
+                <img src="img/logo/aw.png" alt="logo">
               </div>
               <div class="main-img">
-                  <img src="img/logo/bike2.png" alt="logo">
+                <img src="img/logo/aw2.png" alt="logo">
               </div>
             </div>
-            <p class="slider-caption">Логотип для велопрокатной компании</p>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/aw4.png" alt="logo mockup">
+              <img src="img/logo/aw1.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для бренда гиалуроновой косметики ActiveWoman</p>
           </div>
           <!-- FIVE -->
           <div class="slider-item">
-              <div class="slider-main-img five">
-                <div class="main-img">
-                  <img src="img/logo/five.png" alt="logo">
-                </div>
-                <div class="main-img">
-                    <img src="img/logo/mono2.png" alt="logo">
-                </div>
+            <div class="slider-main-img five">
+              <div class="main-img">
+                <img src="img/logo/five.png" alt="logo">
               </div>
-              <p class="slider-caption">Логотип для компании доставки кофе Five</p>
+              <div class="main-img">
+                <img src="img/logo/mono2.png" alt="logo">
+              </div>
             </div>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/five2.png" alt="logo mockup">
+              <img src="img/logo/five3.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для компании доставки кофе Five</p>
+          </div>
           <!-- IBlAG -->
           <div class="slider-item">
-              <div class="slider-main-img iblag">
-                <div class="main-img">
-                  <img src="img/logo/iblag1.png" alt="logo">
-                </div>
-                <div class="main-img">
-                    <img src="img/logo/iblag2.png" alt="logo">
-                </div>
+            <div class="slider-main-img iblag">
+              <div class="main-img">
+                <img src="img/logo/iblag1.png" alt="logo">
               </div>
-              <p class="slider-caption">Логотип для он-лайн справочника iblag.ru</p>
+              <div class="main-img">
+                <img src="img/logo/iblag2.png" alt="logo">
+              </div>
             </div>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/iblag4.png" alt="logo mockup">
+              <img src="img/logo/iblag5.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для он-лайн справочника iblag.ru</p>
+          </div>
 
         </div>
       </div>
@@ -114,9 +131,25 @@
       dots: true,
       infinite: true,
       slidesToShow: 1,
-      slidesToScroll: 1
-      });
-    </script>
+      slidesToScroll: 1,
+      responsive: [
+        {
+          breakpoint: 9000,
+          settings: {
+            slidesToShow: 2,
+            slidesToScroll: 2
+          }
+        },
+        {
+          breakpoint: 900,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1
+          }
+        }
+      ]
+    });
+  </script>
 </body>
 
 </html>
