Add All Sections - In Process

--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -52,6 +52,38 @@
     <div class="container">
       <div class="slider-wrapper">
         <div class="slider-container">
+          <!-- ACTIVE WOMAN -->
+          <div class="slider-item">
+              <div class="slider-main-img woman">
+                <div class="main-img">
+                  <img src="img/logo/aw.png" alt="logo">
+                </div>
+                <div class="main-img">
+                  <img src="img/logo/aw2.png" alt="logo">
+                </div>
+              </div>
+              <div class="slider-main-img-mockup">
+                <img src="img/logo/aw4.png" alt="logo mockup">
+                <img src="img/logo/aw1.png" alt="logo mockup">
+              </div>
+              <p class="slider-caption">Логотип для бренда гиалуроновой косметики ActiveWoman</p>
+            </div>
+          <!-- LAWYER -->
+          <div class="slider-item">
+              <div class="slider-main-img lawyer">
+                <div class="main-img">
+                  <img  src="img/logo/LR2.png" alt="logo">
+                </div>
+                <div class="main-img">
+                  <img src="img/logo/LRwhite.png" alt="logo">
+                </div>
+              </div>
+              <div class="slider-main-img-mockup">
+                <img src="img/logo/LRcard1.png" alt="logo mockup">
+                <img src="img/logo/LRmockup2.png" alt="logo mockup">
+              </div>
+              <p class="slider-caption">Логотип для адвоката - Решетниковой Л. Г.</p>
+            </div>
           <!-- CITY -->
           <div class="slider-item">
             <div class="slider-main-img city">
@@ -67,22 +99,6 @@
               <img src="img/logo/city11.png" alt="logo mockup">
             </div>
             <p class="slider-caption">Логотип для риэлторской компании "Мой Город"</p>
-          </div>
-          <!-- ACTIVE WOMAN -->
-          <div class="slider-item">
-            <div class="slider-main-img woman">
-              <div class="main-img">
-                <img src="img/logo/aw.png" alt="logo">
-              </div>
-              <div class="main-img">
-                <img src="img/logo/aw2.png" alt="logo">
-              </div>
-            </div>
-            <div class="slider-main-img-mockup">
-              <img src="img/logo/aw4.png" alt="logo mockup">
-              <img src="img/logo/aw1.png" alt="logo mockup">
-            </div>
-            <p class="slider-caption">Логотип для бренда гиалуроновой косметики ActiveWoman</p>
           </div>
           <!-- FIVE -->
           <div class="slider-item">
@@ -143,10 +159,40 @@
           <li class="terms-item">Lorem ipsum dolor sit.</li>
           <li class="terms-item">Lorem ipsum dolor sit.</li>
         </ul>
+        <div class="arrow">
+            <a href="#questions" class="scroll">
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+          </div>
       </div>
     </div>
   </div>
   <!-- TERMS END -->
+
+  <!-- QUESTIONS START -->
+  <div class="questions" id="questions">
+      <div class="container">
+        <div class="questions-wrapper">
+          <h2 class="questions-head">Анкета для Вас</h2>
+          <div class="arrow">
+            <a href="#footer" class="scroll">
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- QUESTIONS END -->
+     <!-- FOOTER START -->
+  <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer-wrapper">
+          <h2 class="footer-head">Желаю Вам удачи!</h2>
+          
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER END -->
 
   <script src="js/jQuery341.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
