--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -54,36 +54,36 @@
         <div class="slider-container">
           <!-- ACTIVE WOMAN -->
           <div class="slider-item">
-              <div class="slider-main-img woman">
-                <div class="main-img">
-                  <img src="img/logo/aw.png" alt="logo">
-                </div>
-                <div class="main-img">
-                  <img src="img/logo/aw2.png" alt="logo">
-                </div>
+            <div class="slider-main-img woman">
+              <div class="main-img">
+                <img src="img/logo/aw.png" alt="logo">
               </div>
-              <div class="slider-main-img-mockup">
-                <img src="img/logo/aw4.png" alt="logo mockup">
-                <img src="img/logo/aw1.png" alt="logo mockup">
+              <div class="main-img">
+                <img src="img/logo/aw2.png" alt="logo">
               </div>
-              <p class="slider-caption">Логотип для бренда гиалуроновой косметики ActiveWoman</p>
             </div>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/aw4.png" alt="logo mockup">
+              <img src="img/logo/aw1.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для бренда гиалуроновой косметики ActiveWoman</p>
+          </div>
           <!-- LAWYER -->
           <div class="slider-item">
-              <div class="slider-main-img lawyer">
-                <div class="main-img">
-                  <img  src="img/logo/LR2.png" alt="logo">
-                </div>
-                <div class="main-img">
-                  <img src="img/logo/LRwhite.png" alt="logo">
-                </div>
+            <div class="slider-main-img lawyer">
+              <div class="main-img">
+                <img src="img/logo/LR2.png" alt="logo">
               </div>
-              <div class="slider-main-img-mockup">
-                <img src="img/logo/LRcard1.png" alt="logo mockup">
-                <img src="img/logo/LRmockup2.png" alt="logo mockup">
+              <div class="main-img">
+                <img src="img/logo/LRwhite.png" alt="logo">
               </div>
-              <p class="slider-caption">Логотип для адвоката - Решетниковой Л. Г.</p>
             </div>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/LRcard1.png" alt="logo mockup">
+              <img src="img/logo/LRmockup2.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип для адвоката - Решетниковой Л. Г.</p>
+          </div>
           <!-- CITY -->
           <div class="slider-item">
             <div class="slider-main-img city">
@@ -132,13 +132,23 @@
             </div>
             <p class="slider-caption">Логотип для он-лайн справочника iblag.ru</p>
           </div>
-
-        </div>
-        <div class="arrow">
-            <a href="#terms" class="scroll">
-              <i class="fa fa-angle-down" aria-hidden="true"></i>
-            </a>
+          <!-- PACKLABS -->
+          <div class="slider-item">
+            <div class="slider-main-img packlabs">
+              <div class="main-img">
+                <img src="img/logo/PL/PLgrad.png" alt="logo">
+              </div>
+              <div class="main-img">
+                <img src="img/logo/PL/PLwhite.png" alt="logo">
+              </div>
+            </div>
+            <div class="slider-main-img-mockup">
+              <img src="img/logo/PL/PLmockup1.png" alt="logo mockup">
+              <img src="img/logo/PL/PLmockup2.png" alt="logo mockup">
+            </div>
+            <p class="slider-caption">Логотип компании лекарств для животных PackLabs</p>
           </div>
+        </div>
       </div>
     </div>
   </div>
@@ -159,11 +169,6 @@
           <li class="terms-item">Lorem ipsum dolor sit.</li>
           <li class="terms-item">Lorem ipsum dolor sit.</li>
         </ul>
-        <div class="arrow">
-            <a href="#questions" class="scroll">
-              <i class="fa fa-angle-down" aria-hidden="true"></i>
-            </a>
-          </div>
       </div>
     </div>
   </div>
@@ -171,28 +176,23 @@
 
   <!-- QUESTIONS START -->
   <div class="questions" id="questions">
-      <div class="container">
-        <div class="questions-wrapper">
-          <h2 class="questions-head">Анкета для Вас</h2>
-          <div class="arrow">
-            <a href="#footer" class="scroll">
-              <i class="fa fa-angle-down" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
+    <div class="container">
+      <div class="questions-wrapper">
+        <h2 class="questions-head">Анкета для Вас</h2>
       </div>
     </div>
-    <!-- QUESTIONS END -->
-     <!-- FOOTER START -->
+  </div>
+  <!-- QUESTIONS END -->
+  <!-- FOOTER START -->
   <footer class="footer" id="footer">
-      <div class="container">
-        <div class="footer-wrapper">
-          <h2 class="footer-head">Желаю Вам удачи!</h2>
-          
-        </div>
+    <div class="container">
+      <div class="footer-wrapper">
+        <h2 class="footer-head">Желаю Вам удачи!</h2>
+
       </div>
-    </footer>
-    <!-- FOOTER END -->
+    </div>
+  </footer>
+  <!-- FOOTER END -->
 
   <script src="js/jQuery341.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
@@ -225,17 +225,17 @@
   </script>
   <script>
     // SMOOTH SCROLL
-    $('.scroll').on( 'click', function(){ 
-    var el = $(this);
-    var dest = el.attr('href'); // получаем направление
-    if(dest !== undefined && dest !== '') { // проверяем существование
-        $('html').animate({ 
-    	    scrollTop: $(dest).offset().top // прокручиваем страницу к требуемому элементу
+    $('.scroll').on('click', function () {
+      var el = $(this);
+      var dest = el.attr('href'); // получаем направление
+      if (dest !== undefined && dest !== '') { // проверяем существование
+        $('html').animate({
+          scrollTop: $(dest).offset().top // прокручиваем страницу к требуемому элементу
         }, 500 // скорость прокрутки
         );
-    }
-    return false;
-});
+      }
+      return false;
+    });
   </script>
 </body>
 
