--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -21,7 +21,7 @@
         <div class="header-nav">
           <div class="header-contacts">
             <a href="tel:+79177747752">+7 917 774 7752</a>
-            <a href="mailto:sergejbaturin@gmail.com">sergejbaturin@gmail.com</a>
+            <a href="mailto:sergejbaturin@gmail.com">sergejbaturin1985@gmail.com</a>
             <span>Skype: serjbertran</span>
             <div class="icons">
               <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a> |
