Add Header Free & Some Changes

--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -32,10 +32,16 @@
             </div>
           </div>
         </div>
-
+        
         <h1 class="header-utp">
           ЛОГО<br /><span>ДИЗАЙН</span>
         </h1>
+        <ul class="header-free">
+          <li>В подарок Вам</li>
+          <li>сопровождение</li>
+          <li>что-то ещё</li>
+          <li>бриф</li>
+        </ul>
 
         <div class="arrow">
           <a href="#slider" class="scroll">
@@ -160,14 +166,36 @@
       <div class="terms-wrapper">
         <h2 class="terms-head">Условия работы и стоимость</h2>
         <ul class="terms-list">
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
-          <li class="terms-item">Lorem ipsum dolor sit.</li>
+          <li class="terms-item">
+            <p>Проходим бриф с клиентом бесплатный</p>
+            <p>он-лайн или вживую: добавит ссылки</p>
+          </li>
+          <li class="terms-item">
+            <p>Выясняем, что есть у клиента (сильного  и слабого)</p>
+          </li>
+          <li class="terms-item">
+            <p>Выясняем, что есть у конкурентов (сильного и слабого)</p>
+          </li>
+          <li class="terms-item">
+            <p>Особенности страны, региона, локальные дела</p>
+          </li>
+          <li class="terms-item">
+            <p>На основе брифа и анализа всего создаём макеты, утверждаем</p>
+          </li>
+          <li class="terms-item">
+            <p>Реализация (файлы и документы, которые получит клиент)</p>
+          </li>
+          <li class="terms-item">
+            <p>Бесплатные правки всегда:</p>
+            <p>мой подход к работе, позволяет вносить правки бесплатно</p>
+            <p>Документированы все решения, принятые на проекте (позволяет принимать новые, основываясь на старых)</p>
+          </li>
+          <li class="terms-item">
+            <p>Рекомендации для разных носителей (PDF)</p>
+          </li>
+          <li class="terms-item">
+            <p>Инструкция "Как построить Ваш логотип, если утеряны все исходные файлы"</p>
+          </li>
         </ul>
       </div>
     </div>
@@ -178,11 +206,14 @@
   <div class="questions" id="questions">
     <div class="container">
       <div class="questions-wrapper">
-        <h2 class="questions-head">Анкета для Вас</h2>
+        <h2 class="questions-head">Он-лайн анкета</h2>
+        <p>Несколько вопросов для Вас</p>
+        <p>Они не сложные , но требуют вдумчивости</p>
       </div>
     </div>
   </div>
   <!-- QUESTIONS END -->
+
   <!-- FOOTER START -->
   <footer class="footer" id="footer">
     <div class="container">
