--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -39,7 +39,7 @@
         <ul class="header-free">
           <li>В подарок Вам</li>
           <li>сопровождение</li>
-          <li>что-то ещё</li>
+          <li>слоган</li>
           <li>бриф</li>
         </ul>
 
@@ -57,6 +57,7 @@
   <div class="slider" id="slider">
     <div class="container">
       <div class="slider-wrapper">
+        <p class="slider-openAll">открыть все работы <i class="fa fa-angle-right"></i></p>
         <div class="slider-container">
           <!-- ACTIVE WOMAN -->
           <div class="slider-item">
@@ -160,41 +161,88 @@
   </div>
   <!-- SLIDER END -->
 
+  <!-- WORKS START -->
+  <div class="works">
+      <div class="works-wrapper">
+        <p class="works-close">ЗАКРЫТЬ</p>
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+      </div>
+  </div>
+  <!-- WORKS END -->
+
   <!-- TERMS START -->
   <div class="terms" id="terms">
     <div class="container">
       <div class="terms-wrapper">
         <h2 class="terms-head">Условия работы и стоимость</h2>
+        <p class="terms-minimum">Минимальная стоимость заказа 15000 рублей<br />Минимальный срок исполнения 1 неделя</p>
         <ul class="terms-list">
-          <li class="terms-item">
-            <p>Проходим бриф с клиентом бесплатный</p>
-            <p>он-лайн или вживую: добавит ссылки</p>
+          <li class="terms-list-item">
+            <p>Начало
+              <ul>
+              <li>составляем ТЗ</li>
+              <li>делим работу на этапы (предоплата за каждый этап)</li>
+              <li>пройдите анкету <a href="https://docs.google.com/forms/d/e/1FAIpQLSeinxDu-ZKIsed1mDQhlw7vDKZvymguVCDcJoP1b7XeFk1SAQ/viewform?usp=sf_link" target="_blanc">ЗДЕСЬ</a></li>
+            </ul>
+          </p>
           </li>
-          <li class="terms-item">
-            <p>Выясняем, что есть у клиента (сильного  и слабого)</p>
+          <li class="terms-list-item">
+            <p>Работа
+              <ul>
+                <li>всегда на связи</li>
+                <li>ежедневный отчёт</li>
+                <li>если необходимо - использую удобный Вам таск-менеджер</li>
+              </ul>
+            </p>
           </li>
-          <li class="terms-item">
-            <p>Выясняем, что есть у конкурентов (сильного и слабого)</p>
-          </li>
-          <li class="terms-item">
-            <p>Особенности страны, региона, локальные дела</p>
-          </li>
-          <li class="terms-item">
-            <p>На основе брифа и анализа всего создаём макеты, утверждаем</p>
-          </li>
-          <li class="terms-item">
-            <p>Реализация (файлы и документы, которые получит клиент)</p>
-          </li>
-          <li class="terms-item">
-            <p>Бесплатные правки всегда:</p>
-            <p>мой подход к работе, позволяет вносить правки бесплатно</p>
-            <p>Документированы все решения, принятые на проекте (позволяет принимать новые, основываясь на старых)</p>
-          </li>
-          <li class="terms-item">
-            <p>Рекомендации для разных носителей (PDF)</p>
-          </li>
-          <li class="terms-item">
-            <p>Инструкция "Как построить Ваш логотип, если утеряны все исходные файлы"</p>
+          <li class="terms-list-item">
+            <p>Завершение
+              <ul>
+                <li>бесплатное сопровождение - 2 месяца</li>
+                <li>слоган (если необходим)</li>
+                <li>рекомендации для разных носителей</li>
+                <li>схема построения Вашего логотипа</li>
+              </ul>
+            </p>
           </li>
         </ul>
       </div>
@@ -207,8 +255,10 @@
     <div class="container">
       <div class="questions-wrapper">
         <h2 class="questions-head">Он-лайн анкета</h2>
-        <p>Несколько вопросов для Вас</p>
-        <p>Они не сложные , но требуют вдумчивости</p>
+        <p>Анкета нужна для того, чтобы вдумчиво, неторопясь и в удобной обстановке ответить на 20 вопросов о Вашем бизнесе (деле)</p>
+        <p>Пройдите анкету <a href="https://docs.google.com/forms/d/e/1FAIpQLSeinxDu-ZKIsed1mDQhlw7vDKZvymguVCDcJoP1b7XeFk1SAQ/viewform?usp=sf_link" target="_blanc">ЗДЕСЬ</a></p>
+        <p>Ваши ответы помогут мне создать максимально подходящий логотип</p>
+        <p>По любым вопросам Вы всегда можете позвонить <a href="tel:+79177747752">+7 917 774 7752</a>, написать на почту <a href="mailto:sergejbaturin@gmail.com">sergejbaturin1985@gmail.com</a> или в <a href="https://www.facebook.com/BaturinSergei" target="_blanc">Facebook</a>, <a href="https://vk.com/id195050110" target="_blanc">ВКонтакте</a>, <a href="https://api.whatsapp.com/send?phone=89177747752" target="_blanc">WhatsApp</a>, <a href="https://t-do.ru/serjbaturin" target="_blanc">Telegram</a></p>
       </div>
     </div>
   </div>
@@ -218,8 +268,7 @@
   <footer class="footer" id="footer">
     <div class="container">
       <div class="footer-wrapper">
-        <h2 class="footer-head">Желаю Вам удачи!</h2>
-
+        <h2 class="footer-head">С наилучшими пожеланиями <i class="fa fa-smile-o"></i><br />Сергей Батурин</h2>
       </div>
     </div>
   </footer>
@@ -227,6 +276,7 @@
 
   <script src="js/jQuery341.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
+  <script src="js/js.js"></script>
   <script>
     $('.slider-container').slick({
       autoplay: true,
