--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -165,46 +165,14 @@
   <div class="works">
       <div class="works-wrapper">
         <p class="works-close">ЗАКРЫТЬ</p>
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
-        <img class="works-img" src="./img/logo/LRcard1.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/aw.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/city.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/five.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/iblag.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/lr.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/packlabs.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/mudwaters.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/edu.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
