--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -173,6 +173,8 @@
         <img class="works-img" src="./img/logo/all/packlabs.png" alt="logo">
         <img class="works-img" src="./img/logo/all/mudwaters.png" alt="logo">
         <img class="works-img" src="./img/logo/all/edu.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/arm.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/marathon.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
