Add StellaMarina Logo

--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -175,6 +175,7 @@
         <img class="works-img" src="./img/logo/all/edu.png" alt="logo">
         <img class="works-img" src="./img/logo/all/arm.png" alt="logo">
         <img class="works-img" src="./img/logo/all/marathon.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/stellamarina.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
