--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -176,6 +176,7 @@
         <img class="works-img" src="./img/logo/all/arm.png" alt="logo">
         <img class="works-img" src="./img/logo/all/marathon.png" alt="logo">
         <img class="works-img" src="./img/logo/all/stellamarina.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/bop.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
