--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -177,6 +177,8 @@
         <img class="works-img" src="./img/logo/all/marathon.png" alt="logo">
         <img class="works-img" src="./img/logo/all/stellamarina.png" alt="logo">
         <img class="works-img" src="./img/logo/all/bop.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/open.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/persona.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
