--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>GHPAGES</title>
+  <link rel="shortcut icon" href="icon.png" type="image/png">
+  <title>SerjBaturin Links</title>
 </head>
 
 <body>
