Index page code in main folder

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="icon.png" type="image/png">
-  <title>SerjBaturin Links</title>
+  <title>Serj's Links</title>
 </head>
 
-<body>
+<body style="font-family: sans-serif;">
 <h1>HELLO</h1>
-  <script src="dist/bundle.js"></script>
+<h2>There are links to my test projects</h2>
+<p>Please, be free to contact with me :)<br />Best regards,<br />Serj Baturin</p>
+<p><a href="tel:+79177747752">+7 917 774 7752</a></p>
+<p><a href="https://www.facebook.com/BaturinSergei">facebook.com/BaturinSergei</a></p>
+<p><a href="mailto:sergejbaturin1985@gmail.com">sergejbaturin1985@gmail.com</a></p>
+<h2>Links:</h2>
+<h3><a href="https://github.com/SerjBaturin/test1" target="_blanc">test1</a> - <a href="https://serjbaturin.github.io/test1" target="_blanc">RUN APP</a></h3>
+<h3><a href="https://github.com/SerjBaturin/test2" target="_blanc">test2</a> - <a href="https://serjbaturin.github.io/test2" target="_blanc">RUN APP</a></h3>
+<h3><a href="https://github.com/SerjBaturin/test3" target="_blanc">test3</a> - <span>not ready</span></h3>
+<h3><a href="https://github.com/SerjBaturin/test4" target="_blanc">test4</a> - <a href="https://serjbaturin.github.io/test4" target="_blanc">RUN APP</a></h3>
+<h3><a href="https://github.com/SerjBaturin/bsearch" target="_blanc">bsearch</a> - <span>not-ready</span></h3>
+<h3><a href="https://github.com/SerjBaturin/counter" target="_blanc">counter</a> - <a href="https://serjbaturin.github.io/counter" target="_blanc">RUN APP</a></h3>
+<br>
+<br>
+<br>
+<hr style="width: 50%;">
 </body>
 
 </html>
