Add sunTech Logo

--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -180,6 +180,7 @@
         <img class="works-img" src="./img/logo/all/bop.png" alt="logo">
         <img class="works-img" src="./img/logo/all/open.png" alt="logo">
         <img class="works-img" src="./img/logo/all/persona.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/sunTech.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
