--- a/two-inputs/index.html
+++ b/two-inputs/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="icon.png" type="image/png">
-  <title>Задание 1</title>
+  <title>Two Inputs</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <form>
     <input class="a" type="text" value=0.1>
     <input class="b" type="text" value=0.2>
-    <input class="btn" type="submit" value="Сложить">
+    <input class="btn" type="submit" value="Sum">
   </form>
 
   <script src="bundle.js"></script>
