Sorry, forgot smth

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><a href="https://www.facebook.com/BaturinSergei">facebook.com/BaturinSergei</a></p>
 <p><a href="mailto:sergejbaturin1985@gmail.com">sergejbaturin1985@gmail.com</a></p>
 <h2>Links:</h2>
-<h3><a href="https://github.com/SerjBaturin/two-inputs" target="_blanc">two-inputs</a> - <a href="https://serjbaturin.github.io/test1" target="_blanc">RUN APP</a></h3>
+<h3><a href="https://github.com/SerjBaturin/two-inputs" target="_blanc">two-inputs</a> - <a href="https://serjbaturin.github.io/two-inputs" target="_blanc">RUN APP</a></h3>
 <h3><a href="https://github.com/SerjBaturin/test2" target="_blanc">test2</a> - <a href="https://serjbaturin.github.io/test2" target="_blanc">RUN APP</a></h3>
 <h3><a href="https://github.com/SerjBaturin/test3" target="_blanc">test3</a> - <span>not ready</span></h3>
 <h3><a href="https://github.com/SerjBaturin/test4" target="_blanc">test4</a> - <a href="https://serjbaturin.github.io/test4" target="_blanc">RUN APP</a></h3>
