--- a/chess-knight/index.html
+++ b/chess-knight/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="icon.png" type="image/png">
-  <title>Задание 2</title>
+  <title>Chess Knight</title>
 </head>
 
 <body>
-  <h1> Возможные ходы </h1>
+  <h1> Possible moves </h1>
 
   <form>
     <input id="horse" type="text" value="D4">
