Change lang btn

--- a/chess-knight/index.html
+++ b/chess-knight/index.html
@@ -14,7 +14,7 @@
 
   <form>
     <input id="horse" type="text" value="D4">
-    <input id="btn" type="submit" value="Показать ходы">
+    <input id="btn" type="submit" value="Show moves">
   </form>
   <p id="out"></p>
 
