--- a/chess-knight-view/index.html
+++ b/chess-knight-view/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="icon.png" type="image/png">
   <link rel="stylesheet" href="dist/css/styles.css">
-  <title>Задание 4</title>
+  <title>Chess Knight View</title>
 </head>
 <body>
   <div class="container-numbers">
