--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 <h2>Links:</h2>
 <h3><a href="https://github.com/SerjBaturin/two-inputs" target="_blanc">two-inputs</a> - <a href="https://serjbaturin.github.io/two-inputs" target="_blanc">RUN APP</a></h3>
 <h3><a href="https://github.com/SerjBaturin/chess-knight" target="_blanc">chess knight</a> - <a href="https://serjbaturin.github.io/chess-knight" target="_blanc">RUN APP</a></h3>
-<h3><a href="https://github.com/SerjBaturin/test3" target="_blanc">test3</a> - <span>not ready</span></h3>
-<h3><a href="https://github.com/SerjBaturin/test4" target="_blanc">test4</a> - <a href="https://serjbaturin.github.io/test4" target="_blanc">RUN APP</a></h3>
-<h3><a href="https://github.com/SerjBaturin/bsearch" target="_blanc">bsearch</a> - <span>not-ready</span></h3>
+<h3><a href="https://github.com/SerjBaturin/chess-knight-view" target="_blanc">chess knight view</a> - <a href="https://serjbaturin.github.io/chess-knight-view" target="_blanc">RUN APP</a></h3>
 <h3><a href="https://github.com/SerjBaturin/counter" target="_blanc">counter</a> - <a href="https://serjbaturin.github.io/counter" target="_blanc">RUN APP</a></h3>
 <br>
 <br>
