--- a/logo-design/index.html
+++ b/logo-design/index.html
@@ -181,6 +181,7 @@
         <img class="works-img" src="./img/logo/all/open.png" alt="logo">
         <img class="works-img" src="./img/logo/all/persona.png" alt="logo">
         <img class="works-img" src="./img/logo/all/sunTech.png" alt="logo">
+        <img class="works-img" src="./img/logo/all/fogg.png" alt="logo">
       </div>
   </div>
   <!-- WORKS END -->
