--- a/index.html
+++ b/index.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="icon.png" type="image/png" />
+    <link rel="stylesheet" href="/media/styles.css" />
+    <title>SerjBaturin's Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <img src="media/me1.png" alt="myfoto" class="me" />
+      <div class="header__text">
+        <h2>Serj Baturin</h2>
+        <h1>front-end developer</h1>
+        <span>react | redux | node | mongoDB</span>
+        <a href="tel:+79177747752">+7 917 774 7752</a>
+        <a href="mailto:sergejbaturin1985@gmail.com"
+          >sergejbaturin1985@gmail.com</a
+        >
+        <div class="icons">
+          <a href="https://www.facebook.com/BaturinSergei"
+            ><img src="media/facebook.png" alt="facebook"
+          /></a>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="icon.png" type="image/png">
-  <title>Serj's Links to Test Projects</title>
-  <style>
-  body {  
-    font-family: sans-serif;
-  }
-  .first-h2 {
-    letter-spacing: -.15px;
-  }
-  .descr {
-    margin-top: -1em;
-    font-size: .87em;
-  }
-  </style>
-</head>
-
-<body>
-<img src="resumeFoto4.png" alt="myFoto" style="width: 100px; height: 100px;">
-<h1>HELLO</h1>
-<h2 class="first-h2">There are links to my test projects</h2>
-<p class="descr">sources are in repositories, "production" code on github pages</p>
-<table border="0" cellpadding="10" cellspacing="0" bgcolor="#f0f0f0" rules="cols" bordercolor="#999" style="border-bottom: 1px solid #999">
-    <thead>
-      <tr style="background: #999">
-          <td>
-            <h2>Repositories</h2>
-            </td>
-            <td>
-              <h2>Launch App</h2>
-            </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-          <td>
-              <h3><a href="https://github.com/SerjBaturin/two-inputs" target="_blanc">two-inputs</a></h3>
-            </td>
-            <td align="right">
-                <h3><a href="https://serjbaturin.github.io/two-inputs" target="_blanc">RUN APP</a></h3>
-          </td>
-      </tr>
-      <tr>
-        <td>
-            <h3><a href="https://github.com/SerjBaturin/chess-knight" target="_blanc">chess knight</a></h3>
-        </td>
-        <td align="right">
-            <h3><a href="https://serjbaturin.github.io/chess-knight" target="_blanc">RUN APP</a></h3>
-        </td>
-      </tr>
-      <tr>
-        <td>
-            <h3><a href="https://github.com/SerjBaturin/chess-knight-view" target="_blanc">chess knight view</a></h3>
-        </td>
-        <td align="right">
-            <h3><a href="https://serjbaturin.github.io/chess-knight-view" target="_blanc">RUN APP</a></h3>
-        </td>
-      </tr>
-      <tr>
-        <td>
-            <h3><a href="https://github.com/SerjBaturin/counter" target="_blanc">counter (React/Redux)</a></h3>
-        </td>
-        <td align="right">
-            <h3><a href="https://serjbaturin.github.io/counter" target="_blanc">RUN APP</a></h3>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-<p>Please, be free to contact with me : )<br />Best regards,<br />Serj Baturin</p>
-<p><a href="tel:+79177747752">+7 917 774 7752</a></p>
-<p><a href="https://api.whatsapp.com/send?phone=89177747752" target="_blanc">WhatsApp</a> | <a href="https://t-do.ru/serjbaturin" target="_blanc">Telegram</a></p>
-<p><a href="https://www.facebook.com/BaturinSergei">facebook.com/BaturinSergei</a></p>
-<p><a href="mailto:sergejbaturin1985@gmail.com">sergejbaturin1985@gmail.com</a></p>
-</body>
-
+          <a href="https://www.linkedin.com/in/sergei-baturin/"
+            ><img src="media/linkedin.png" alt="linkedin"
+          /></a>
+          <a class="resume" href="/media/Sergei_Baturin(en).pdf" download
+            >download resume</a
+          >
+        </div>
+      </div>
+    </header>
+    <!-- <section class="projects">
+      <div class="container">
+        <div class="projects-wrapper">
+          <h2>Projects</h2>
+          <div class="project">
+            <h3>Todo app with react / redux</h3>
+            <img src="/media/todo-app.png" alt="todo-app" />
+            <div class="links">
+              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
+              <a href="#">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="project">
+            <h3>Todo app with react / redux</h3>
+            <img src="/media/todo-app.png" alt="todo-app" />
+            <div class="links">
+              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
+              <a href="#">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="project">
+            <h3>Todo app with react / redux</h3>
+            <img src="/media/todo-app.png" alt="todo-app" />
+            <div class="links">
+              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
+              <a href="#">GitHub Repo</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- <footer>
+      <div class="container">
+        <div class="footer-wrapper">
+          <h2>thats a footer</h2>
+        </div>
+      </div>
+    </footer> -->
+  </body>
 </html>
