Add CSS & Chess project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img src="media/me1.png" alt="myfoto" class="me" />
+      <img src="media/me2.png" alt="myfoto" class="me" />
       <div class="header__text">
         <h2>Serj Baturin</h2>
         <h1>front-end developer</h1>
@@ -28,48 +28,55 @@
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
           <a class="resume" href="/media/Sergei_Baturin(en).pdf" download
-            >download resume</a
+            >download CV</a
           >
         </div>
       </div>
     </header>
-    <!-- <section class="projects">
-      <div class="container">
-        <div class="projects-wrapper">
-          <h2>Projects</h2>
-          <div class="project">
+    <section class="projects">
+      <h2>projects:</h2>
+      <div class="projects-wrapper">
+        <div class="project">
+          <div class="project-img">
             <h3>Todo app with react / redux</h3>
             <img src="/media/todo-app.png" alt="todo-app" />
             <div class="links">
-              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
-              <a href="#">GitHub Repo</a>
+              <a href="https://baturin-todo-app.herokuapp.com/" target="_blanc"
+                >Run App</a
+              >
+              <a href="https://github.com/SerjBaturin/todo-app" target="_blanc">GitHub Repo</a>
             </div>
           </div>
-          <div class="project">
-            <h3>Todo app with react / redux</h3>
-            <img src="/media/todo-app.png" alt="todo-app" />
+          <div class="description">
+            <p>
+              <b>Skills:</b> React, Redux, LocalStorage API, Node
+              <br>
+              <b>Description:</b> App with todo cathegories deployed on Heroku cloud service. Create React App on the front-end.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-img">
+            <h3>Chess Knight moves visualization</h3>
+            <img src="/media/chess3.png" alt="todo-app" />
             <div class="links">
-              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
-              <a href="#">GitHub Repo</a>
+              <a href="https://serjbaturin.github.io/chess-knight-view/" target="_blanc"
+                >Run App</a
+              >
+              <a href="https://github.com/SerjBaturin/chess-knight-view" target="_blanc">GitHub Repo</a>
             </div>
           </div>
-          <div class="project">
-            <h3>Todo app with react / redux</h3>
-            <img src="/media/todo-app.png" alt="todo-app" />
-            <div class="links">
-              <a href="https://baturin-todo-app.herokuapp.com/">Run App</a>
-              <a href="#">GitHub Repo</a>
-            </div>
+          <div class="description">
+            <p>
+              <b>Skills:</b> JavaScript, HTML, CSS
+              <br>
+              <b>Description:</b> Chess Knight moves visualization handled by click
+            </p>
           </div>
         </div>
       </div>
-    </section> -->
-    <!-- <footer>
-      <div class="container">
-        <div class="footer-wrapper">
-          <h2>thats a footer</h2>
-        </div>
-      </div>
-    </footer> -->
+    </section>
+    <footer>
+    </footer>
   </body>
 </html>
