Add Target 'blanc' attr

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           >sergejbaturin1985@gmail.com</a
         >
         <div class="icons">
-          <a href="https://www.facebook.com/BaturinSergei"
+          <a href="https://www.facebook.com/BaturinSergei" target="_blanc"
             ><img src="media/facebook.png" alt="facebook"
           /></a>
 
-          <a href="https://www.linkedin.com/in/sergei-baturin/"
+          <a href="https://www.linkedin.com/in/sergei-baturin/" target="_blanc"
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
           <a class="resume" href="/media/Sergei_Baturin(en).pdf" download
@@ -34,7 +34,7 @@
       </div>
     </header>
     <section class="projects">
-      <h2>projects:</h2>
+      <h2><span>projects:</span></h2>
       <div class="projects-wrapper">
         <div class="project">
           <div class="project-img">
@@ -51,7 +51,7 @@
             <p>
               <b>Skills:</b> React, Redux, LocalStorage API, Node
               <br>
-              <b>Description:</b> App with todo cathegories deployed on Heroku cloud service. Create React App on the front-end.
+              <b>Description:</b> App with todo cathegories deployed on Heroku cloud service. Create React App on the front-end
             </p>
           </div>
         </div>
@@ -68,7 +68,7 @@
           </div>
           <div class="description">
             <p>
-              <b>Skills:</b> JavaScript, HTML, CSS
+              <b>Skills:</b> JavaScript, HTML, CSS, GULP
               <br>
               <b>Description:</b> Chess Knight moves visualization handled by click
             </p>
